# mtg_scraper

./: .gitmodules  CHANGELOG.md  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: biweekly_check_gaps.yml  daily-scrape.yml  daily_scraping.yml
scraper/: __main__.py  schemas.py
scraper/parsers/: mtgo.py  mtgtop8.py
scraper/schemas/: __init__.py  deck.py  formats.py  player.py  round.py  scraped_object.py  standing.py  tournament.py
scraper/scripts/: fix_premodern_format.py  mtgo_empy_decks.py  scrape_all_mtgtop8.py  scrape_gaps_mtgtop8.py  top8_check_gaps.py  top8_rename_files.py  top8_rescrape_all.py  top8_scrape_all.py
scraper/services/: __init__.py  mtgo.py  mtgprime.py  mtgtop8.py
scraper/utils/: __init__.py  date_parsing.py  mtgo.py  mtgtop8.py  selenium_driver.py  swiss_tournament.py
